<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context="cc.duduhuo.simpler.activity.UpdateRemarkActivity">

    <FrameLayout
        android:id="@+id/flTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/titlebar_bg">

        <TextView
            android:id="@+id/tvBack"
            style="@style/titlebar_back_textview"
            android:layout_width="66dp"
            android:layout_height="match_parent"
            android:background="@drawable/selector_titlebar_btn"
            android:text="@string/cancel"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/title_update_remark"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size"/>

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="66dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@drawable/selector_titlebar_btn"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/title_back_text_color"
            android:textSize="@dimen/title_btn_text_size"/>
    </FrameLayout>

    <!--标题栏阴影-->
    <include layout="@layout/content_head_shadow"/>

    <EditText
        android:id="@+id/etRemark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flTitle"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text"
        android:ellipsize="end"
        android:lines="1"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text=""
        android:textColor="#222222"
        android:textSize="16sp"/>
</RelativeLayout>
